--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HELLO</title>
+    <title>DOFUS Bot Crack</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        .table > tbody > tr:first-child > td {
+            border: none;
+        }
+
+        .navbar-header {
+            float: left;
+            text-align: center;
+            width: 100%;
+        }
+        .navbar-brand {float:none;}
+    </style>
 </head>
 <body>
-HELLO
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="navbar-header">
+            <span class="navbar-brand">DOFUS Bot Crack</span>
+        </div>
+    </nav>
+
+    <div class="container" style="margin-top: 50px">
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-header"><b>Versions</b></div>
+                    <div class="card-body">
+                        <table class="table table-borderless">
+                            <tr>
+                                <td>DOFUS</td>
+                                <td><span class="badge badge-success">2.45.14.0</span></td>
+                            </tr>
+                            <tr>
+                                <td>Mufibot</td>
+                                <td><span class="badge badge-success">1.13.4</span></td>
+                            </tr>
+                            <tr>
+                                <td>Swiftbot</td>
+                                <td><span class="badge badge-success">2.2.0</span></td>
+                            </tr>
+                        </table>
+
+                        <div align="center">
+                            <a href="https://mega.nz/#F!4AAGEBYQ!LimfT2ptj4FXJspldSnQWA" target="_blank" class="btn btn-primary">Télécharger (MEGA.NZ)</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="">
+                    <div class="card-header"><b>Avantages</b></div>
+                    <div class="card-body">
+                        <table class="table table-borderless">
+                            <tr><td>100% Gratuit</td></tr>
+                            <tr><td>Sans virus</td></tr>
+                            <tr><td>Compatible dernière version DOFUS</td></tr>
+                            <tr><td>Non détecté par l'antibot</td></tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
