--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,22 @@
             text-align: center;
             width: 100%;
         }
-        .navbar-brand {float:none;}
+        .navbar-brand {
+            float:none;
+        }
+
+        .card-body {
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+
+        .table {
+            margin-bottom: 0;
+        }
+
+        .btn {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -60,6 +75,7 @@
                             <tr><td>Sans virus</td></tr>
                             <tr><td>Compatible dernière version DOFUS</td></tr>
                             <tr><td>Non détecté par l'antibot</td></tr>
+                            <tr><td>Pas de compte requis</td></tr>
                         </table>
                     </div>
                 </div>
