Add Discord invite link

--- a/static/index.html
+++ b/static/index.html
@@ -62,6 +62,7 @@
 
                         <div align="center">
                             <a href="https://mega.nz/#F!4AAGEBYQ!LimfT2ptj4FXJspldSnQWA" target="_blank" class="btn btn-primary">Télécharger (MEGA.NZ)</a>
+                            <a href="https://discord.gg/RyWYSKh" target="_blank" class="btn" style="background-color:#7289da;color:#fff">Discord</a>
                         </div>
                     </div>
                 </div>
