Add Swiftbot Touch & decode base64 credentials

--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,10 @@
                                 <td>Swiftbot</td>
                                 <td><span class="badge badge-success">2.2.3</span></td>
                             </tr>
+                            <tr>
+                                <td>Swiftbot Touch</td>
+                                <td><span class="badge badge-success">1.2.0</span></td>
+                            </tr>
                         </table>
 
                         <div align="center">
